# SlicerDentalSegmentator

./: .gitignore  CMFSegmentator.py  CMakeLists.txt  CONTRIBUTING.md  DentalSegmentator.py  LICENSE.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
CMFSegmentatorLib/: PythonDependencyChecker.py  SegmentationLogic.py  SegmentationWidget.py  Utils.py  __init__.py
DentalSegmentator/: CMakeLists.txt  DentalSegmentator.py
DentalSegmentator/DentalSegmentatorLib/: PythonDependencyChecker.py  SegmentationLogic.py  SegmentationWidget.py
DentalSegmentator/Testing/: IntegrationTestCase.py  SegmentationWidgetTestCase.py
DentalSegmentatorLib/: PythonDependencyChecker.py  SegmentationLogic.py  SegmentationWidget.py
Resources/UI/: CMFSegmentator.ui
Testing/: PythonDependencyCheckerTestCase.py  SegmentationLogicTestCase.py  SegmentationWidgetTestCase.py  Utils.py  __init__.py
